<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red"
    android:padding="8dip"
    >
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_b_label"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_large"
        android:textColor="@color/light_green"
        android:paddingBottom="16dip"
        />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:id="@+id/btn_finish_b"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_finish_b_label"
            android:onClick="finishActivityB"
            />

        <Button
            android:id="@+id/btn_start_a"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_start_a_label"
            android:onClick="startActivityA"
            />

        <Button
            android:id="@+id/btn_start_dialog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_start_dialog_label"
            android:onClick="startDialog"
            />


    </RelativeLayout>


   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_marginTop="10dp"
       android:textSize="@dimen/font_medium"
       android:text="@string/activity_b_main_text"
       android:textColor="@color/light_blue"
       />


</LinearLayout>
