<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="8dip"
    >

    <TextView
        android:id="@+id/activity_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dip"
        android:text="@string/activity_a_label"
        android:textColor="@color/white"
        android:textSize="44dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dip">


        <Button
            android:id="@+id/btn_finish_a"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_finish_a_label"
            android:onClick="finishActivityA"
            />

        <Button
            android:id="@+id/btn_start_b"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_start_b_label"
            android:onClick="startActivityB"
            />

        <Button
            android:id="@+id/btn_start_dialog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_start_dialog_label"
            android:onClick="startDialog"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/font_medium"
            android:text="@string/timer_counter_label"
            android:textColor="@color/light_blue"
            />

        <TextView
            android:id="@+id/timer_counter_view"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="4dip"
            android:typeface="monospace"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/font_medium"
        android:text="@string/context_switch_counter_label"
        android:textColor="@color/light_blue"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <TextView
            android:id="@+id/context_switch_counters_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="4dip"
            android:typeface="monospace"
            />
    </ScrollView>

</LinearLayout>

